APP_2022 : Change logic call API and Fix JWT authentication